ACE/testing/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
spec:
  selector:
    matchLabels:
      app: trigger-react
  template:
    metadata:
      labels:
        app: trigger-react
    spec:
      containers:
      - name: tekton-pod
        image: usmanasim11/cicd:react-test123
        ports:
        - containerPort: 3000
