ACE/testing/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactapp-svc
  namespace: dev
spec:
  selector:
    app: trigger-react
