ACE/testing/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.org/keepalive: "50000"
spec:
  rules:
  - http:
      paths:
      - path: /react(/|$)(.*)
        pathType: Prefix
        backend:
          service:
